fix gap

--- a/css/main.css
+++ b/css/main.css
@@ -135,3 +135,7 @@ html, body{
 .card-body {
     padding: 3rem 3rem !important;
 }
+
+.card-gap {
+    gap: 20px;
+}
