--- a/css/media.css
+++ b/css/media.css
@@ -43,6 +43,10 @@
         font-size: 1em;
     }
 
+    .card-gap {
+        gap: 0;
+    }
+
 }
 
 @media (min-width: 992px) {
@@ -62,6 +66,10 @@
 
     .card p {
         font-size: 0.8em;
+    }
+
+    .card-gap {
+        gap: 20px;
     }
 }
 
